--- a/SourceCode/index.html
+++ b/SourceCode/index.html
@@ -21,6 +21,8 @@
 	<link href="plugins/magnific-popup/magnific-popup.css" rel="stylesheet" type="text/css">
 	<link rel="stylesheet" type="text/css" href="styles/main_styles.css">
 	<link rel="stylesheet" type="text/css" href="styles/responsive.css">
+	<link rel="stylesheet" type="text/css" href="css/offers_styles.css">
+	<link rel="stylesheet" type="text/css" href="css/offers_responsive.css">
 </head>
 <body>
 
@@ -173,65 +175,45 @@
 
 	<!-- Footer -->
 
-	<h2  style="color:white;font-family: Candara" ><b>{{listheader}}</b></h2>
+	<div class="container">
+		<div class="row" ng-repeat="x in placesArray">
+			<div class="col">
+				<div class="items item_grid clearfix">
 
-								<div class="oputudiv"  ng-repeat="x in placesArray" style="background: aquamarine;">
-									<table   >
-										<tr style="color: black;">
-											<td><b>{{nameHeader}}</b></td>
-											<td>{{x.substring(x.indexOf("***")+3,x.indexOf("^^^"))}}</td>
-										</tr>
-										<tr  style="color: black;" >
-											<td><b>{{addressHeader}}</b></td>
-											<td>{{x.substring(x.indexOf("###")+3,x.indexOf("***"))}}</td>
-										</tr>
+					<!-- Item -->
+					<div class="item clearfix rating_5">
+						<div class="item_image"><img ng-src="{{x.substring(x.indexOf('^^^')+3,x.length)}}"/></div>
+						<div class="item_content">
+							<div class="item_price">{{x.substring(0,x.indexOf("###"))}}</div>
+							<div class="item_title">{{x.substring(x.indexOf("***")+3,x.indexOf("^^^"))}}</div>
+							<div class="item_title">{{x.substring(x.indexOf("###")+3,x.indexOf("***"))}}</div>
+							<ul>
+								<li><table><tr ng-repeat="x in weekdayHours[$index]">
+									<td>{{x}}</td>
+								</tr></table></li>
 
-										<tr style="color: black;">
-											<td><b>{{ratingHeader}}</b></td>
-											<td>{{x.substring(0,x.indexOf("###"))}}</td>
-										</tr>
-                                        <tr style="color: black;">
-											<td><b>{{description}}</b></td>
-											<!--<td>{{x.substring(0,x.indexOf("###"))}}</td>-->
-										</tr>
-										</br>
+							</ul>
+							<div class="rating rating_5" data-rating="5">
+								<i class="fa fa-star"></i>
+								<i class="fa fa-star"></i>
+								<i class="fa fa-star"></i>
+								<i class="fa fa-star"></i>
+								<i class="fa fa-star"></i>
+							</div>
+							<div class="item_text"><b>{{author_name_header}}</b> {{reviews[$index].substring(0,reviews[$index].indexOf('@@'))}} <b>{{user_rating_header}} </b> {{reviews[$index].substring(reviews[$index].indexOf('$$')+2,reviews[$index].length)}}</div>
+							<div class="item_text">{{comment_header}}</b> {{reviews[$index].substring(reviews[$index].indexOf('##')+2,reviews[$index].indexOf('$$'))}}</div>
+							<div class="item_more_link"><a href="#">Read More</a></div>
+						</div>
+					</div>
+					<!-- Item -->
 
-										<tr>
-											<!--<td><img ng-src="{{picsArray[$index].substring(picsArray[$index].indexOf('###')+3,picsArray[$index].length)}}"/></td>-->
-                                            <td><img ng-src="{{x.substring(x.indexOf('^^^')+3,x.length)}}"/></td>
-										</tr>
+				</div>
+			</div>
+		</div>
 
-									</table>
+	</div>
 
-                                    <div><h3><b>{{reviewHeader}}</b></h3></div>
-                                    <div >
-                                        <table style="color: black;" >
-                                            <tr>
-                                                <td><b>{{author_name_header}}</b> {{reviews[$index].substring(0,reviews[$index].indexOf('@@'))}}</td>
-                                            </tr>
-                                            <tr>
-                                                <td><b>{{reviewtime_header}}</b>{{reviews[$index].substring(reviews[$index].indexOf('@@')+2,reviews[$index].indexOf('##'))}}</td>
-                                            </tr>
-                                            <tr>
-                                                <td><b>{{comment_header}}</b> {{reviews[$index].substring(reviews[$index].indexOf('##')+2,reviews[$index].indexOf('$$'))}}</td>
-                                            </tr>
-                                            <tr>
-                                                <td><b>{{user_rating_header}}</b> {{reviews[$index].substring(reviews[$index].indexOf('$$')+2,reviews[$index].length)}}</td>
-                                            </tr>
-                                        </table>
-                                    </div>
 
-                                        <table>
-										<tr>
-											<td><b>{{weeklyhoursheader}}</b></td>
-										</tr>
-                                            <!--<tr style="color: black;">{{weekdayHours[$index]}}</tr>-->
-										<tr style="color: black;" ng-repeat="x in weekdayHours[$index]">
-											<td>{{x}}</td>
-										</tr>
-
-									</table>
-								</div>
 </div>
 
 
