Committing validation for User Destination

--- a/SourceCode/index.html
+++ b/SourceCode/index.html
@@ -98,6 +98,7 @@
 							<div class="find_item">
 								<div>Destination:</div>
 								<input type="text"  class="destination find_input" required="required" ng-model="searchDestination" placeholder="Enter your Destination">
+								<h5 style="color: red">{{finalErr}}</h5>
 							</div>
 							<div class="find_item">
 								<div>From</div>
