--- a/SourceCode/index.html
+++ b/SourceCode/index.html
@@ -97,26 +97,26 @@
 						<form action="#" id="find_form" class="find_form d-flex flex-md-row flex-column align-items-md-center align-items-start justify-content-md-between justify-content-start flex-wrap">
 							<div class="find_item">
 								<div>Destination:</div>
-								<input type="text"  class="destination find_input" required="required" ng-model="searchDestination" placeholder="Enter your Destination">
+								<input type="text"  class="destination find_input"   ng-model="searchDestination" placeholder="Enter your Destination">
 								<h5 style="color: red">{{finalErr}}</h5>
 							</div>
 							<div class="find_item">
 								<div>From</div>
-								<input type="date" class="destination find_input" >
+								<input type="date"  class="destination find_input" >
 							</div>
 							<div class="find_item">
 								<div>To</div>
-								<input type="date" class="destination find_input"  >
+								<input type="date"  class="destination find_input"  >
 							</div>
 							<div class="find_item">
 								<div>Budget</div>
-								<input type="number" class="destination find_input"  placeholder="">
+								<input type="number"  class="destination find_input"  placeholder="">
 							</div>
 							<div class="find_item">
 								<div>Interest</div>
 								<select name="interest" id="interest" class="dropdown_item_select find_input">
 									<option>Select</option>
-									<option>Museum</option>
+						 			<option>Museum</option>
 									<option>Adventure</option>
 									<option>Devotional</option>
 									<option>Scenic</option>
@@ -185,25 +185,26 @@
 					<div class="item clearfix rating_5">
 						<div class="item_image"><img ng-src="{{x.substring(x.indexOf('^^^')+3,x.length)}}"/></div>
 						<div class="item_content">
-							<div class="item_price">{{x.substring(0,x.indexOf("###"))}}</div>
-							<div class="item_title">{{x.substring(x.indexOf("***")+3,x.indexOf("^^^"))}}</div>
-							<div class="item_title">{{x.substring(x.indexOf("###")+3,x.indexOf("***"))}}</div>
+
+                            <div class="item_text"><h3>{{x.substring(x.indexOf("***")+3,x.indexOf("^^^"))}}</h3></div>
+                            <div class="item_text"><h4>{{x.substring(x.indexOf("###")+3,x.indexOf("***"))}}</h4></div>
+                            <div class="item_text">{{x.substring(0,x.indexOf("###"))}} <i class="fa fa-star"></i> </div>
 							<ul>
 								<li><table><tr ng-repeat="x in weekdayHours[$index]">
-									<td>{{x}}</td>
+									<td class="item_text">{{x}}</td>
 								</tr></table></li>
 
 							</ul>
-							<div class="rating rating_5" data-rating="5">
+							<!--<div class="rating rating_5" data-rating="5">
 								<i class="fa fa-star"></i>
 								<i class="fa fa-star"></i>
 								<i class="fa fa-star"></i>
 								<i class="fa fa-star"></i>
 								<i class="fa fa-star"></i>
-							</div>
+							</div>-->
 							<div class="item_text"><b>{{author_name_header}}</b> {{reviews[$index].substring(0,reviews[$index].indexOf('@@'))}} <b>{{user_rating_header}} </b> {{reviews[$index].substring(reviews[$index].indexOf('$$')+2,reviews[$index].length)}}</div>
 							<div class="item_text">{{comment_header}}</b> {{reviews[$index].substring(reviews[$index].indexOf('##')+2,reviews[$index].indexOf('$$'))}}</div>
-							<div class="item_more_link"><a href="#">Read More</a></div>
+							<!--<div class="item_more_link"><a href="#">Read More</a></div>-->
 						</div>
 					</div>
 					<!-- Item -->
