Successful message in Registration Page

--- a/SourceCode/RegisterPage.html
+++ b/SourceCode/RegisterPage.html
@@ -48,10 +48,12 @@
                        ng-click="insertData()">
                 <br>
                 <span id="finalError" class="error-fields"></span>
+                <!--<span id="finalMsg" style="color:palegreen"></span>-->
             </fieldset>
         </form>
         <!--<input type="text"  style="width: 100% ;border: 0px; background-color: #F5F5F5; color: red" ng-model="finalErr">-->
         <h1 style="color: red">{{finalErr}}</h1>
+        <h1 style="color: palegreen">{{finalMsg}}</h1>
     </div>
 </div>
     <script>
