Added rendering login to the Itinerary box

--- a/SourceCode/index.html
+++ b/SourceCode/index.html
@@ -136,7 +136,7 @@
 							<div>
 								</br>
 								<input type="button" class="button" style="color: #fe435b" ng-click="getSearchResult()" value="Find"/>
-								<input type="button" class="button" style="color: #fe435b" ng-click="viewDirections()" value="View Places"/>
+                                &nbsp &nbsp<input type="button" class="button" style="color: #fe435b" ng-click="viewDirections()" value="View Places"/>
 							</div>
 
 							
