--- a/SourceCode/directions.html
+++ b/SourceCode/directions.html
@@ -72,17 +72,18 @@
         <select id="end" class="dropdown_item_select find_input" style="sie: white">
             <option ng-repeat="x in elements" value="{{x}}">{{x}}</option>
         </select>
-        <br>
-        <input type="submit" class="button" style="color: #fe435b" id="submit" value="View">
-        <input type="submit" class="button" style="color: #fe435b" id="back" value="Back">
+        </br>
+        </br>
+        <input type="submit" class="button123" style="color: #fe435b" id="submit" value="View" onclick="hideFunction()">
+        &nbsp &nbsp<input type="submit" class="button123" style="color: #fe435b" id="back" value="Back">
     </div>
-    <div id="directions-panel"></div>
+    <br>
+    <div id="directions-panel" style="display:none"></div>
 </div>
 <script async defer
         src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAWhSE1HAi753_M8rcFTfcbBXUQInf8y6c&v=3.exp&callback=initMap">
 </script>
 <script>
-
     var url=window.location.href;
     var place=(url.substr(50,url.indexOf("&&")-50)).replace("%20"," ");
     var interest=(url.substr(url.indexOf("&&")+2)).replace("%20"," ");
@@ -100,7 +101,6 @@
     document.getElementById('back').addEventListener('click', function() {
         location.href='index.html?place'+place+"&&interest"+interest;
     });
-
      addArray = [];
     angular.module('indexpage',[])
         .controller('indexctrl', function($scope, $http) {
@@ -167,12 +167,17 @@
                     summaryPanel.innerHTML += route.legs[i].end_address + '<br>';
                     summaryPanel.innerHTML += route.legs[i].distance.text + '<br><br>';
                 }
-
             } else {
                 window.alert('Directions request failed due to ' + status);
             }
         });
     };
+    function hideFunction() {
+        var x = document.getElementById("directions-panel");
+        if (x.style.display === "none") {
+            x.style.display = "block";
+        }
+    }
 </script>
 </body>
 </html>
