--- a/SourceCode/about.html
+++ b/SourceCode/about.html
@@ -1,20 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<title>About us</title>
-<meta charset="utf-8">
-<meta http-equiv="X-UA-Compatible" content="IE=edge">
-<meta name="description" content="Destino project">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" type="text/css" href="styles/bootstrap4/bootstrap.min.css">
-<link href="plugins/font-awesome-4.7.0/css/font-awesome.min.css" rel="stylesheet" type="text/css">
-<link rel="stylesheet" type="text/css" href="styles/about_styles.css">
-<link rel="stylesheet" type="text/css" href="styles/about_responsive.css">
+	<title>About us</title>
+	<meta charset="utf-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="description" content="Destino project">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<link rel="stylesheet" type="text/css" href="styles/bootstrap4/bootstrap.min.css">
+	<link href="plugins/font-awesome-4.7.0/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+	<link rel="stylesheet" type="text/css" href="styles/about_styles.css">
+	<link rel="stylesheet" type="text/css" href="styles/about_responsive.css">
 </head>
 <body>
 
 <div class="super_container">
-	
+
 	<!-- Header -->
 
 	<header class="header">
@@ -38,6 +38,7 @@
 						<nav class="main_nav ml-auto">
 							<ul class="main_nav_list">
 								<li class="main_nav_item"><a href="index.html">Home</a></li>
+								<li class="main_nav_item"><a href="profile.html">Profile</a></li>
 								<li class="main_nav_item active"><a href="#">About us</a></li>
 								<!--<li class="main_nav_item"><a href="offers.html">Offers</a></li>-->
 								<!--<li class="main_nav_item"><a href="news.html">News</a></li>-->
@@ -75,8 +76,8 @@
 			<div class="row">
 				<div class="col">
 					<div class="section_title text-center">
-					<br>
-					<br>
+						<br>
+						<br>
 						<h2>Welcome to Travel Explorer</h2>
 						<div>About Us</div>
 					</div>
@@ -86,12 +87,12 @@
 				<div class="col-lg-8 offset-lg-2">
 					<div class="milestones_text">
 						<p>Are you making plans for visiting a place? A fun trip with family and friends? Not sure of the places to Visit?
-						Worried about the budget and the best plan for the trip? Don't worry we are here to help you. Give us the destination that you
-						want to visit, length of travel, budget and interests we would give you set of best plans under the budget that you
-						expect</p>
+							Worried about the budget and the best plan for the trip? Don't worry we are here to help you. Give us the destination that you
+							want to visit, length of travel, budget and interests we would give you set of best plans under the budget that you
+							expect</p>
 					</div>
 				</div>
-					
+
 			</div>
 
 		</div>
