--- a/SourceCode/contact.html
+++ b/SourceCode/contact.html
@@ -1,5 +1,4 @@
-<!DOCTYPE html>
-<html lang="en">
+<html ng-app="myApp" ng-controller="View1Ctrl">
 <head>
 <title>Contact</title>
 <meta charset="utf-8">
@@ -8,13 +7,21 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" type="text/css" href="styles/bootstrap4/bootstrap.min.css">
 <link href="plugins/font-awesome-4.7.0/css/font-awesome.min.css" rel="stylesheet" type="text/css">
-<link rel="stylesheet" type="text/css" href="styles/contact_styles.css">
-<link rel="stylesheet" type="text/css" href="styles/contact_responsive.css">
+<link rel="stylesheet" type="text/css" href="styles/about_styles.css">
+<link rel="stylesheet" type="text/css" href="styles/about_responsive.css">
+<link rel="stylesheet" type="text/css" href="styles/contact_styles1.css">
+<link rel="stylesheet" type="text/css" href="styles/contact_responsive1.css">
 </head>
 <body>
 
+<script type="text/javascript" src="https://code.angularjs.org/1.1.1/angular.js"></script>
+<script type="text/javascript" src="https://code.angularjs.org/1.1.1/angular-resource.js"></script>
+<script type="text/javascript" src="https://code.angularjs.org/1.1.1/angular-sanitize.js"></script>
+<script src="js/nodemailer.js"></script>
 <div class="super_container">
+	
 	<!-- Header -->
+
 	<header class="header">
 		<div class="container">
 			<div class="row">
@@ -36,12 +43,17 @@
 						<nav class="main_nav ml-auto">
 							<ul class="main_nav_list">
 								<li class="main_nav_item"><a href="index.html">Home</a></li>
+								<li class="main_nav_item"><a href="profile.html">Profile</a></li>
 								<li class="main_nav_item"><a href="about.html">About us</a></li>
+								<!--<li class="main_nav_item"><a href="offers.html">Offers</a></li>-->
+								<!--<li class="main_nav_item"><a href="news.html">News</a></li>-->
 								<li class="main_nav_item active"><a href="#">Contact</a></li>
 								<li class="main_nav_item"><a href="LoginPage.html">Sign Out</a></li>
+
 							</ul>
 						</nav>
 
+						<!-- Search -->
 
 						<!-- Hamburger -->
 						<div class="hamburger ml-auto"><i class="fa fa-bars" aria-hidden="true"></i></div>
@@ -54,100 +66,81 @@
 
 	<!-- Menu -->
 
+
 	<!-- Home -->
+
 
 	<!-- Find Form -->
 
-	<div class="find">
-		<!-- Image by https://unsplash.com/@garciasaldana_ -->
 
-		<!-- <div class="find_background parallax-window" data-parallax="scroll" data-image-src="images/find.jpg" data-speed="0.8"></div> -->
+	<!-- About -->
 
-	</div>
-	
-		<div class="newsletter">
-		<!-- Image by https://unsplash.com/@garciasaldana_ -->
-		<div class="newsletter_background" style="background-image:url(images/newsletter.jpg)"></div>
+	<div class="milestones">
+		<div class="milestones_background parallax-window" data-parallax="scroll" data-image-src="images/fact_background.jpg" data-speed="0.8"></div>
 		<div class="container">
-
-			<div class="row contact_content">
-				<div class="col-lg-5">
-					<div class="contact_subtitle">
-						<p>Contact us !. Get in Touch with us :)</p>
-					</div>
-					<div class="contact_info">
-						<div class="contact_info_box">i</div>
-						<div class="contact_info_container">
-							<div class="contact_subtitle">
-								<ul>
-									<li>Name: <b>Saran Akkiraju</b></li>
-									<li>Class ID: 2</li>
-									<li>Email: saf2k@mail.umkc.edu</li>
-								</ul>
-							</div>
-						</div>
-					</div>
-
-					<div class="contact_info">
-						<div class="contact_info_box">i</div>
-						<div class="contact_info_container">
-							<div class="contact_subtitle">
-								<ul>
-									<li>Name: <b>Harish Tata</b></li>
-									<li>Class ID: 50</li>
-									<li>Email: hthnv@mail.umkc.edu</li>
-								</ul>
-							</div>
-						</div>
-					</div>
-					<div class="contact_info">
-						<div class="contact_info_box">i</div>
-						<div class="contact_info_container">
-							<div class="contact_subtitle">
-								<ul>
-									<li>Name: <b>Masthan Krishna Neeraj Padarthi</b></li>
-									<li>Class ID: 37</li>
-									<li>Email: nmpxr@mail.umkc.edu</li>
-								</ul>
-							</div>
-						</div>
-					</div>
-
-					<div class="contact_info">
-						<div class="contact_info_box">i</div>
-						<div class="contact_info_container">
-							<div class="contact_subtitle">
-								<ul>
-									<li>Name: <b>Pallavi Desai</b></li>
-									<li>Class ID: 62</li>
-									<li>Email: pd2qd@mail.umkc.edu</li>
-								</ul>
-							</div>
-						</div>
-					</div>
-
-				</div>
-			</div>
-			<div class="row contact_map">
-				<!-- Google Map -->
-
+			<div class="row">
 				<div class="col">
-					<div id="google_map">
-						<div class="map_container">
-							<div id="map"></div>
-						</div>
+					<div class="section_title text-center">
+					<br>
+					<br>
+						<h2>Keep in touch with developers of this page !</h2>
 					</div>
 				</div>
-
 			</div>
-		
-		
-		
+			
+			<div class="row">
+				<div class="col-lg-8 offset-lg-2">
+					<div class="milestones_text">
+				
+						<p><b>Harish Tata</b> |  Email: hthnv@mail.umkc.edu</p>
+						<p><b>Pallavi Desai</b>  | Email: pd2qd@mail.umkc.edu</p>
+						<p><b>Masthan Krishna Neeraj Padarthi</b>  | Email: nmpxr@mail.umkc.edu</p>
+						<p><b>Saran Akkiraju</b>  | Email: saf2k@mail.umkc.edu</p>
+					</div>
+				</div>
+					
+			</div>
+			<div class="row">
+				<div class="col">
+
+					<!-- Contact Form -->
+					<div class="contact_form_container">
+						<div class="contact_title text-center">Any Queries? Let us know !!</div>
+						<form ng-submit="sendmail()" id="contact_form" class="contact_form text-center">
+							<input type="text" ng-model="formData.name" id="contact_form_name" class="contact_form_name input_field" placeholder="Name" required="required" data-error="Name is required.">
+							<input type="text" ng-model="formData.email" id="contact_form_email" class="contact_form_email input_field" placeholder="E-mail" required="required" data-error="Email is required.">
+							<input type="text" ng-model="formData.sub" id="contact_form_subject" class="contact_form_subject input_field" placeholder="Subject" required="required" data-error="Subject is required.">
+							<textarea ng-model="formData.mes" id="contact_form_message" class="text_field contact_form_message" name="message" rows="4" placeholder="Message" required="required" data-error="Please, write us a message."></textarea>
+							<button  type="submit" id="form_submit_button" class="form_submit_button button trans_200" onclick="contactpg()">send message<span></span><span></span><span></span></button>
+						</form>
+                        <br><br><br>
+                        <input type="text"  style="width: 100% ;border: 0px;  background: transparent; color: red;text-align:center" ng-model="finalErr">
+					</div>
+
+				</div>
+			</div>
+
+		</div>
+	</div>
+	<div class="contact_form_section">
+		<div class="container">
+			
 		</div>
 	</div>
 
-	<!-- Contact -->
+	<!-- Milestones -->
 
+
+
+	<!-- Services -->
+
+
+
+	<!-- Newsletter -->
+
+
+
+	<!-- Footer -->
 </div>
 
 <script src="js/jquery-3.2.1.min.js"></script>
@@ -160,7 +153,6 @@
 <script src="plugins/greensock/ScrollToPlugin.min.js"></script>
 <script src="plugins/easing/easing.js"></script>
 <script src="plugins/parallax-js-master/parallax.min.js"></script>
-<script src="https://maps.googleapis.com/maps/api/js?v=3.exp&key=AIzaSyD9bw3TJ7-Pg_Ah72NDteupHvciB5tlDI8"></script>
-<script src="js/contact_custom.js"></script>
+<script src="js/about_custom.js"></script>
 </body>
 </html>
