--- a/SourceCode/index.html
+++ b/SourceCode/index.html
@@ -53,6 +53,7 @@
 						<nav class="main_nav ml-auto">
 							<ul class="main_nav_list">
 								<li class="main_nav_item active"><a href="#">Home</a></li>
+								<li class="main_nav_item"><a href="profile.html">Profile</a></li>
 								<li class="main_nav_item"><a href="about.html">About us</a></li>
 								<li class="main_nav_item"><a href="contact.html">Contact</a></li>
 								<li class="main_nav_item" onclick="signOut();"><a href="" >Sign Out</a></li>
