Issue:- Welcome message is not working correctly because the sub string is not calculated properly.
Fix:-implemented with the help of sub string method

--- a/SourceCode/index.html
+++ b/SourceCode/index.html
@@ -311,7 +311,7 @@
 </div>
 <script>
     var url=window.location.href;
-    var userName=(url.substr(45)).replace("%20"," ");
+    var userName=(url.substring(url.indexOf("?")+1,url.length)).replace("%20"," ");
 
     console.log("It is !!!!!!!!!!!"+userName);
     if(userName.indexOf("place")<0) {
