Committing the logic for forgot password

--- a/SourceCode/LoginPage.html
+++ b/SourceCode/LoginPage.html
@@ -47,8 +47,11 @@
                 <input type="button" class="button" style="padding:9px 18px; left: 37%;position: relative"
                        value="Login"
 					   ng-click="getDbData()">
+				<br>
+				<a href="" ng-click="getPassword()"><u>forgot password?</u></a>
             </fieldset>
         </form>
+
 		<!--<div id="finalError" class="error-fields"></div>-->
 		<!--<span ng-model="finalError" class="error-fields"></span>-->
         <input type="text"  style="width: 100% ;border: 0px; background-color: #F5F5F5; color: red" ng-model="finalErr">
